# ce-query

./: CHANGELOG.md  Cargo.toml  README.md  ceapp.toml
.github/workflows/: ci.yml
examples/: quickstart.rs  sales.ndjson
src/: caps.rs  catalog.rs  combine.rs  dataset.rs  engine.rs  join.rs  lib.rs  main.rs  mesh.rs  order.rs  plan.rs  query.rs  sql.rs
tests/: end_to_end.rs
